# NECOM

./: .bashrc  .bashrc_base  .gitignore  .pdm.toml  ;  README.md  picoscope_acquire.py  pyproject.toml  shared_parameters.py  shared_params_deffault.json  shared_params_testing.yaml  start.bat  start.py  start_test.py  structure.md  test.yaml
GNOME_data_insertion/: readme.txt  run.py
MCU/: readme.md
MCU/NECOM_MCU_5/: NECOM_MCU.h  NECOM_MCU_5.ino  calibration_pulses.cpp  calibration_pulses.h  cmds.cpp  cmds.h  do_at_times.cpp  do_at_times.h  modulation.cpp  modulation.h  pin_defs.h  steppers.cpp  steppers.h  trigger_comms.h
MCU/STEPPER_MCU/: STEPPER_MCU.ino  cmds.cpp  cmds.h  readme.md
__html_GUI/: simple_gui.html  simple_gui.py
acquisition/: dummy_acquire.py  many_to_hdf.py  picoscope_acquire.py  queueview.py  util.py  view_raw.py
analysis/scrap/: p
experiment_run/GNOME-data-matching/: arraybuffer.py  chunked_buffer.py  dmt_files.py  hdf_viewer.py  magDataServer.py  main.py  ringbuffer.py  test.py
experiment_run/acquisition/: dummy_acquire.py  many_to_hdf.py  picoscope_acquire.py  ps5000aStreamingExample.py  sanity_acq.py
instrument_control/: calibration_pulses.py  controller.py  fancy_pulse_pattern_OLD.py  fgs.py  fgs_mod.py  pulse_patterns.py  teensy_wiggler.py  util.py
notes/: may_17.md
processing/: plotting.py  scratch.py  sig_proc_utils.py  signal_fit_and_serve.py  signature_calculator.py  signature_serve.py  util.py
scrap/: may_17.md
scripts/: ramp.py  start.py  write_default_params.py
visualise/: signal_plotter.py
(+48 files in other folders)
