[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Morgan Hedges", email = "morgan.hedges@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.73.0",
    "ipython>=8.0.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
